# final-project

./: .gitignore  Cargo.toml  README.md  final-project-proposal.tex
assets/snow-block/: snow-block.blend
assets/snowfield_env/: irradiance_negx.hdr  irradiance_negy.hdr  irradiance_negz.hdr  irradiance_posx.hdr  irradiance_posy.hdr  irradiance_posz.hdr  radiance_0_negx.hdr  radiance_0_negy.hdr  radiance_0_negz.hdr  radiance_0_posx.hdr  radiance_0_posy.hdr  radiance_0_posz.hdr  radiance_1_negx.hdr  radiance_1_negy.hdr  radiance_1_negz.hdr  radiance_1_posx.hdr  radiance_1_posy.hdr  radiance_1_posz.hdr  radiance_2_negx.hdr  radiance_2_negy.hdr  radiance_2_negz.hdr  radiance_2_posx.hdr  radiance_2_posy.hdr  radiance_2_posz.hdr  radiance_3_negx.hdr  radiance_3_negy.hdr  radiance_3_negz.hdr  radiance_3_posx.hdr  radiance_3_posy.hdr  radiance_3_posz.hdr  radiance_4_negx.hdr  radiance_4_negy.hdr  radiance_4_negz.hdr  radiance_4_posx.hdr  radiance_4_posy.hdr  radiance_4_posz.hdr  radiance_5_negx.hdr  radiance_5_negy.hdr  radiance_5_negz.hdr  radiance_5_posx.hdr  (+2 more)
assets/snowman/: snowman.blend  snowman.blend1
doc/cmapp/: pitch.txt  poster.tex
doc/design/: Makefile  design.tex
doc/proposal/: final-project-proposal.tex
doc/report/: Makefile  final-report.tex  references.bib  research.txt
src/: app.rs  common.rs  geo.rs  interact.rs  main.rs  ui.rs
src/app/: halo.rs  home.rs  lets_get_physical.rs  mod.rs  settings.rs  snowflakes.rs  workshop.rs
src/common/: mod.rs
src/common/gurus/: interact.rs  mod.rs  (+1 more)
states/: lets_get_physical.json  settings.json  snowflakes.json
