[package]
name = "vr-final-project"
version = "0.1.0"
authors = [
    "Sumner Evans <jonathanevans@mines.edu>",
    "Robbie Merillat <rdmerillat@mines.edu>",
    "Sam Sartor <ssartor@mines.edu>",
]

[dependencies]
flight = { git = "https://github.com/flight-rs/flight" }
clap = "^2.26.2"
ctrlc = "3.0.3"
simplelog = "^0.4.2"
glutin = "^0.12.0"
gfx_window_glutin = "^0.20.0"
gfx_device_gl = "^0.15.0"
gfx = "^0.17.1"
log = "^0.3.8"
nphysics3d = "^0.7.2"
ncollide = "^0.13.0"
num-traits = "^0.1"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"

[dependencies.nalgebra]
version = "^0.13.0"
features = [ "serde-serialize" ]

[profile.dev]
opt-level = 1
codegen-units = 4

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
